Update FnLocal.java